# authsources_keycloak

./: pyproject.toml  requirements.txt
.github/workflows/: testing.yaml
src/authsources_keycloak/: actions.py  source.py
tests/: conftest.py  keycloak_postgres.yaml  start.sh  test_source.py
tests/export/: realm-export.json
